--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Situs web REST API yang menyediakan berbagai macam fitur untuk mengembangkan aplikasimu.">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
     <meta name="author" content="zeeoneofc">
-    <title>Alphabot - REST APIs</title>
+    <title>BOT OFFICIAL - REST APIs</title>
     <meta property="og:site_name" name="og:site_name" content="Alphabot APIs">
     <meta property="og:title" name="og:title" content="Alphabot - REST APIs">
     <meta property="og:url" name="og:url" content="https://api-alphabot.herokuapp.com/">
@@ -43,7 +43,7 @@
       <div class="sidebar-wrapper">
         <div class="logo">
           <a href="javascript:void(0)" class="simple-text logo-mini">
-            Alphabot
+            BOT OFFICIAL 
           </a>
           <a href="javascript:void(0)" class="simple-text logo-normal">
             Rest Api's
@@ -181,12 +181,12 @@
                     <tbody>
                       <tr>
                       <p> Allah SWT</p>
-                      <p> My Perents</p>
-                      <p> ekadanuarta</p>
-                      <p> Rynz</p>
-                      <p> Nyz</p>
-                      <p> Zhirrr</p>
-                      <p> ZeeoneOfc</p>                     
+                      <p> My Parents</p>
+                      <p> Bot Official</p>
+                      <p> ZeeoneOf </p>
+                      <p> Siegrin</p>
+                      <p> SaipulAnuar</p>
+                      <p> My Team</p>                     
                       <p> Creative Time</p>
                       <p> Arnz Tim</p>
                       <p> ALL HUMAN</p>
@@ -203,17 +203,17 @@
         <div class="container-fluid">
           <ul class="nav">
             <li class="nav-item">
-              <a href="javascript:void(0)" class="nav-link">
+              <a href="#" class="nav-link">
                 Bot Team
               </a>
             </li>
-            <li class="nav-item">
+            <li class="#">
               <a href="javascript:void(0)" class="nav-link">
                 About Us
               </a>
             </li>
             <li class="nav-item">
-              <a href="javascript:void(0)" class="nav-link">
+              <a href="#" class="nav-link">
                 Blog
               </a>
             </li>
@@ -223,7 +223,7 @@
             <script>
               document.write(new Date().getFullYear())
             </script>2021 made with <i class="tim-icons icon-heart-2"></i> by
-            <a href="javascript:void(0)" target="_blank">ZeeoneOfc</a> for a better web.
+            <a href="javascript:void(0)" target="_blank">BOT OFFICIAL WHATSAPP</a> for a better web.
           </div>
         </div>
       </footer>
@@ -254,9 +254,9 @@
         </li>
         <li class="button-container">
           <a class="text-center">Contact Me</a>
-          <a href="https://wa.me/62887435047326?text=Hallo%20bang" target="_blink" class="btn btn-success btn-block btn-round">Whatsapp</a>
-          <a href="https://t.me/zeeoneofc" target="_blink" class="btn btn-info btn-block btn-round">Telegram</a>
-          <a href="https://instagram.com/zeeoneofc" target="_blink" class="btn btn-primary btn-block btn-round">Instagram</a>
+          <a href="https://wa.me/6281381685954?text=Hallo%20bang" target="_blink" class="btn btn-success btn-block btn-round">Whatsapp</a>
+          <a href="https://t.me/mrclnotwibu" target="_blink" class="btn btn-info btn-block btn-round">Telegram</a>
+          <a href="https://instagram.com/mrclnotwibu" target="_blink" class="btn btn-primary btn-block btn-round">Instagram</a>
         </li>
       </ul>
     </div>
